--- a/curso.html
+++ b/curso.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/estilo-compuesto.css">
 </head>
 
-<body>
+<body class="fondo-detalle">
     <!--primeralinea logo carro-->
     <header class="contenedor-buscador">
         <article class="contenedor-log-bu-ca">
@@ -59,7 +59,7 @@
 
             <article class="contenedor-detalles-importantes">
                 <div class="img-curso">
-                    <img src="img/9.png" alt="">
+                    <img src="img/9.png" alt="" width="300">
                 </div>
 
 
@@ -73,13 +73,21 @@
 
                     <div>
                         <h2 class="TITULO-inf-cur">CURSO DE PELUQUERIA CANINA NIVEL 1</h2>
-                        <p class="infor-curso">Valor: 15000.-</p>
-                        <p class="infor-curso">Tiempo de dedicacion 2 clases por semana de una hora </p>
-                        <p class="infor-curso">Descripcion del curso: Este curso esta propuesto para los interesados
-                            en
-                            aprender como cortar y emparejar el pelo de perros de raza(o meztisos) chica. </p>
-                        <p class="infor-curso">Requisitos previos: Ninguno</p>
+                        <div class="parrafito">
+                            <p class="infor-curso1">Valor: </p>
+                            <p class="infor-curso">15000.-</p>
 
+                            <p class="infor-curso1">Tiempo de dedicacion:</p>
+                            <p class="infor-curso"> 2 horas diarias de practica </p>
+                            <p class="infor-curso1">Descripcion del curso:</p>
+                            <p class="infor-curso">Este curso esta propuesto para los interesados
+                                en aprender como cortar y emparejar el pelo de perros de raza(o meztisos) chica.
+                                Para obtener el certificado se realizara un examen precencial en CABA,CALLE 99 ARROZ
+                                ROJO ALTURA 1954
+                                CON TURNO.</p>
+                            <p class="infor-curso1">Requisitos previos: </p>
+                            <p class="infor-curso"> Ninguno</p>
+                        </div>
                     </div>
 
                     <!--botn de inscripcion-->
@@ -89,109 +97,121 @@
                     </div>
 
 
-                    <div class="contenedor-contenido-pc">
-
-                        <div>
-                            <h2 class="TITULOS">CONTENIDOS POR CLASE</h2>
-                            <nav class="cuadrito">
-                                <ul>
-
-
-                                    <li class="lista-principal">Introduccion</li>
-
-
-                                    <ul>
-                                        <li class="lista-contenidos">
-                                            <a class="video" href="https://www.youtube.com/watch?v=pRecSWeyaSo"
-                                                target="_blank">Curso Básico de Peluquería Canina : Paso 1: Corte
-                                                Inicial
-                                            </a>
-                                            <p class="video">30min</p>
-                                        </li>
-                                        <li class="lista-contenidos">
-                                            <a class="video" href="https://www.youtube.com/watch?v=EMKuFk6O_iQ"
-                                                target="_blank">PELUQUERÍA CANINA CORTE DE TRANSICIÓN SHIH TZU CON
-                                                NICOLÁS
-                                                HERRERO</a>
-                                            <p class="video">30min</p>
-                                        </li>
-                                        <li class="lista-contenidos">
-                                            <a class="video" href="https://www.youtube.com/watch?v=8qkcmUcuUVg"
-                                                target="_blank">¿Cómo cortar el pelo a un perro? CORTE BÁSICO |
-                                                Animal
-                                                Salut
-                                            </a>
-                                            <p class="video">30min</p>
-                                        </li>
-                                    </ul>
-
-
-
-                                    <li class="lista-principal">Unidad 2</li>
-
-
-
-
-                                    <ul>
-                                        <li class="lista-contenidos">
-                                            <a class="video" href="https://www.youtube.com/watch?v=0f_GLwxwlo4"
-                                                target="_blank">¡NO LO RAPES! Cómo CORTAR el PELO a un PERRO con
-                                                TIJERA
-                                                en
-                                                casa
-                                                y HACERLO FELIZ </a>
-                                            <p class="video">30min</p>
-                                        </li>
-                                        <li class="lista-contenidos">
-                                            <a class="video" href="https://www.youtube.com/watch?v=fYduO0O2Gw8"
-                                                target="_blank">¡CAMBIO BESTIAL! PERRO ABANDONADO va a la PELUQUERÍA
-                                                por
-                                                PRIMERA
-                                                VEZ </a>
-                                            <p class="video">30min</p>
-                                        </li>
-                                        <li class="lista-contenidos">
-                                            <a class="video" href="https://www.youtube.com/watch?v=jlvbZWlhUmk"
-                                                target="_blank">ARREGLO COMERCIAL POODLE </a>
-                                            <p class="video">30min</p>
-                                        </li>
-                                    </ul>
-
-
-
-
-
-                                </ul>
-
-
-
-                            </nav>
-                        </div>
-                    </div>
 
 
 
                 </div>
-
 
             </article>
+
+        </section>
+        <section class="seccion-contenido">
+            <div class="contenedor-contenido-pc">
+
+                <div>
+                    <h2 class="TITULO-inf-cur-cla">CONTENIDOS POR CLASE</h2>
+                    <nav class="cuadrito">
+                        <ul>
+
+
+                            <li class="lista-principal">Introduccion</li>
+
+
+                            <ul>
+                                <li class="lista-contenidos">
+                                    <a class="video" href="https://www.youtube.com/watch?v=pRecSWeyaSo"
+                                        target="_blank">Curso Básico de Peluquería Canina : Paso 1: Corte
+                                        Inicial
+                                    </a>
+                                    <p class="video">30min</p>
+                                </li>
+                                <li class="lista-contenidos">
+                                    <a class="video" href="https://www.youtube.com/watch?v=EMKuFk6O_iQ"
+                                        target="_blank">PELUQUERÍA CANINA CORTE DE TRANSICIÓN SHIH TZU CON
+                                        NICOLÁS
+                                        HERRERO</a>
+                                    <p class="video">30min</p>
+                                </li>
+                                <li class="lista-contenidos">
+                                    <a class="video" href="https://www.youtube.com/watch?v=8qkcmUcuUVg"
+                                        target="_blank">¿Cómo cortar el pelo a un perro? CORTE BÁSICO |
+                                        Animal
+                                        Salut
+                                    </a>
+                                    <p class="video">30min</p>
+                                </li>
+                            </ul>
+
+
+
+                            <li class="lista-principal">Unidad 2</li>
+
+
+
+
+                            <ul>
+                                <li class="lista-contenidos">
+                                    <a class="video" href="https://www.youtube.com/watch?v=0f_GLwxwlo4"
+                                        target="_blank">¡NO LO RAPES! Cómo CORTAR el PELO a un PERRO con
+                                        TIJERA
+                                        en
+                                        casa
+                                        y HACERLO FELIZ </a>
+                                    <p class="video">30min</p>
+                                </li>
+                                <li class="lista-contenidos">
+                                    <a class="video" href="https://www.youtube.com/watch?v=fYduO0O2Gw8"
+                                        target="_blank">¡CAMBIO BESTIAL! PERRO ABANDONADO va a la PELUQUERÍA
+                                        por
+                                        PRIMERA
+                                        VEZ </a>
+                                    <p class="video">30min</p>
+                                </li>
+                                <li class="lista-contenidos">
+                                    <a class="video" href="https://www.youtube.com/watch?v=jlvbZWlhUmk"
+                                        target="_blank">ARREGLO COMERCIAL POODLE </a>
+                                    <p class="video">30min</p>
+                                </li>
+                            </ul>
+
+
+
+
+
+                        </ul>
+
+
+
+                    </nav>
+                </div>
+            </div>
+
+            <div>
+                <img class="ajolote" src="img/cute-ajolote.gif" alt="" >
+            </div>
         </section>
 
-        <section>
-  
-            <div>
-                <h2 class="TITULOS">DOCENTE</h2>
-            </div>
-            <div><!--foto-->
-                <img src="img/arianaGrande.jpg" alt="Ariana Grande">
-            </div>
+        <div>
+            <h2 class="titulos1">DOCENTE</h2>
+        </div>
+        <section class="detalle-profesor">
+
+
+
+
+            <img class="imagen-profesor" src="img/arianaGrande.jpg" alt="Ariana Grande">
+
+
             <article class="contenedor-informacion-profesora">
-                <h3 class="TITULOS">Ariana Grande</h3>
-                <div><!--estrellitas-->
+
+                <h3 class="titulos">Ariana Grande</h3>
+
+                <div class="estrellitas"><!--estrellitas-->
                     <img src="" alt="estrellas de valoracion">
                 </div>
-                <div>
-                    <p>Ariana Grande Butera
+
+                <div class="parrafos">
+                    <p class="definicion-ariana">Ariana Grande Butera
                         es una cantante, compositora,
                         empresaria, instrumentista, productora
                         discográfica y actriz estadounidense. Actualmente se dedica a
@@ -205,52 +225,54 @@
         </section>
 
     </main>
-    <aside> 
-    <!--recomendaciones-->
-    <article class="contenedor-cuadrito-curso">
-        <!--curso 2-->
-        <article class="contenedor-cuadrito">
-            <img src="img/7.png" alt="nivel 2">
-            <div>
-                <p>$15000.-</p>
-            </div>
-            <div>
-                <h5>Peluqueria Canina Nivel 2</p>
-                    <h6>duracion=15hs</h6>
-                    <a href="">ver detalle</a>
+    <aside>
+        <!--recomendaciones-->
+        <div class="contenedor-cuadrito-curso">
+            <article class="contenedor-cuadrito">
+                <img class="contenedor-img-cuadrito" src="img/8.png" alt="nivel 1">
+                <div>
+                    <p class="precio-">$15000.-</p>
+                </div>
 
-            </div>
-        </article>
+                <div class="contenedor-informacion-cuadrito">
+                    <h5 class="hh5">Diseño de ropa canina</p>
+                        <h6 class="duracion">Duracion=16hs</h6>
+                        <a class="ver-detalle" href="curso.html">ver detalle</a>
 
-        <!--curso 3-->
-        <article class="contenedor-cuadrito">
-            <img src="img/10.png" alt="nivel 1">
-            <div>
-                <p>$15000.-</p>
-            </div>
-            <div>
-                <h5>Uñas Canina</p>
-                    <h6>duracion=15hs</h6>
-                    <a href="">ver detalle</a>
+                </div>
+            </article>
 
-            </div>
-        </article>
+            <!--curso 2-->
+            <article class="contenedor-cuadrito">
+                <img class="contenedor-img-cuadrito" src="img/6.png" alt="nivel 2">
+                <div>
+                    <p class="precio-">$15000.-</p>
+                </div>
 
-        <!--curso 4-->
-        <article class="contenedor-cuadrito">
-            <img src="img/8.png" alt="nivel 1">
-            <div>
-                <p>$15000.-</p>
-            </div>
-            <div>
-                <h5>Confeccion de ropa canina</p>
-                    <h6>duracion=15hs</h6>
-                    <a href="">ver detalle</a>
+                <div class="contenedor-informacion-cuadrito">
+                    <h5 class="hh5">Peluqueria Canina Nivel 2</p>
+                        <h6 class="duracion">Duracion=16hs</h6>
+                        <a class="ver-detalle" href="curso.html">ver detalle</a>
 
-            </div>
-        </article>
-    </article>
-</aside>
+                </div>
+            </article>
+
+            <!--curso 3-->
+            <article class="contenedor-cuadrito">
+                <img class="contenedor-img-cuadrito" src="img/4.png" alt="nivel 1">
+                <div>
+                    <p class="precio-">$15000.-</p>
+                </div>
+
+                <div class="contenedor-informacion-cuadrito">
+                    <h5 class="hh5">Coloracion canina</p>
+                        <h6 class="duracion">Duracion=16hs</h6>
+                        <a class="ver-detalle" href="curso.html">ver detalle</a>
+
+                </div>
+            </article>
+        </div>
+    </aside>
 
 
     <!-- ultima linea datos del grupo-->
