--- a/index-Estetica.html
+++ b/index-Estetica.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!--mediaViewport-->
-   <style>
+    <!--mediaViewport-->
+    <style>
         img {
             max-width: 100%;
             height: auto;
         }
-        </style>
+    </style>
 
     <title>Cursos Estetica Canina</title>
     <link rel="stylesheet" href="css/estilo-todas-las-pag.css">
@@ -54,11 +54,12 @@
                 <a href="index-Estetica.html" target="_blank">INICIO</a>
             </li>
             <li class="idem">
-                <a href="giftCard.html" target="_blank">GIFTCARD</a></li>
+                <a href="giftCard.html" target="_blank">GIFTCARD</a>
+            </li>
             <li class="idem">
                 <a href="calendario.html" target="_blank">CALENDARIO</a>
             </li>
- 
+
             <li class="idem">
                 <a href="contacto.html" target="_blank">CONTACTO</a>
             </li>
