detalle curso terminado, comienzo formulario

--- a/contacto.html
+++ b/contacto.html
@@ -48,7 +48,7 @@
         </ul>
     </nav>
 
-    <main>
+    <main  class="fondocont">
         <section class="conjunto">
             <article>
                 <div class="contenedor-contacto-datosContacto">
