--- a/curso.html
+++ b/curso.html
@@ -13,7 +13,7 @@
     </style>
     <title>Cursos peluqueria canina nivel 1</title>
     <link rel="stylesheet" href="css/estilo-todas-las-pag.css">
-    <link rel="stylesheet" href="css/estilo-compuesto.css">
+    <link rel="stylesheet" href="css/detalle-curso.css">
     <link rel="stylesheet" href="css/estrellas.css">
 </head>
 
