--- a/index-Estetica.html
+++ b/index-Estetica.html
@@ -15,13 +15,35 @@
 
     <title>Cursos Estetica Canina</title>
     <link rel="stylesheet" href="css/estilo-todas-las-pag.css">
-    <link rel="stylesheet" href="css/estilo-compuesto.css">
+    <link rel="stylesheet" href="css/index.css">
     <!--carrucel-->
     <link rel="stylesheet" href="css/css/slick-theme.css">
     <link rel="stylesheet" href="css/css/slick.css">
 </head>
 
 <body>
+
+    <!--CREAR EL MODAL-->
+    <section class="modal" id="modal-cursos">
+        <div class="modal_contenedor">
+            <img src="img/modal.svg" class="modal_img" alt="">
+            <h2 class="modal_titulo">¡¡Gracias por confiar en nosotros!!</h2>
+            <p class="cursosComprados_modal"></p>
+            <a href="#" class="cerrar_modal"> Cerrar </a>
+        </div>
+    </section>
+<!--
+        <section class="modal" name="modal-cursos" value="1"> </section>
+    <section class="modal" name="modal-cursos" value="2">
+
+        <div class="modal_contenedor">
+            <img src="img/modal.svg" class="modal_img" alt="">
+            <h2 class="modal_titulo">¡¡Gracias por confiar en nosotros!!</h2>
+            <p class="cursosComprados_modal"></p>
+            <a href="#" class="cerrar_modal"> Cerrar </a>
+        </div>
+    </section>
+-->
 
 
     <!--primeralinea logo carro-->
@@ -258,7 +280,7 @@
 
 
     </footer>
-
+    <script src="js/index.js"></script>
     <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="js/slick.min.js"></script>
 
