--- a/calendario.html
+++ b/calendario.html
@@ -13,7 +13,7 @@
         </style>
     <title>Cursos Estetica Canina</title>
     <link rel="stylesheet" href="css/estilo-todas-las-pag.css">
-    <link rel="stylesheet" href="css/estilo-compuesto.css">
+    <link rel="stylesheet" href="css/calendario.css">
     <link href='fullcalendar/core/main.css' rel='stylesheet' />
     <link href='fullcalendar/daygrid/main.css' rel='stylesheet' />
     <script src='fullcalendar/core/main.js'></script>
