--- a/formulario.html
+++ b/formulario.html
@@ -13,7 +13,7 @@
     </style>
     <title>Cursos Estetica Canina</title>
     <link rel="stylesheet" href="css/estilo-todas-las-pag.css">
-    <link rel="stylesheet" href="css/estilo-compuesto.css">
+    <link rel="stylesheet" href="css/formulario.css">
 </head>
 
 <body>
