--- a/giftCard.html
+++ b/giftCard.html
@@ -14,7 +14,7 @@
     <title>Cursos Estetica Canina</title>
 
     <link rel="stylesheet" href="css/estilo-todas-las-pag.css">
-    <link rel="stylesheet" href="css/estilo-compuesto.css">
+    <link rel="stylesheet" href="css/gif.css">
  
 
 </head>
