Modal de inscripcion, no pude agregar/quitar

--- a/curso.html
+++ b/curso.html
@@ -14,6 +14,7 @@
     <title>Cursos peluqueria canina nivel 1</title>
     <link rel="stylesheet" href="css/estilo-todas-las-pag.css">
     <link rel="stylesheet" href="css/detalle-curso.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/estrellas.css">
 </head>
 
@@ -287,7 +288,7 @@
                 <div>
                     <p class="precio-">$15000.-</p>
                 </div>
-
+                <button id="boton-curso-" class="boton-cartelito" type="button">COMPRAR</button>
                 <div class="contenedor-informacion-cuadrito">
                     <h5 class="hh5">Diseño de ropa canina</p>
                         <h6 class="duracion">Duracion=16hs</h6>
@@ -302,7 +303,7 @@
                 <div>
                     <p class="precio-">$15000.-</p>
                 </div>
-
+                <button id="boton-curso-" class="boton-cartelito" type="button">COMPRAR</button>
                 <div class="contenedor-informacion-cuadrito">
                     <h5 class="hh5">Peluqueria Canina Nivel 2</p>
                         <h6 class="duracion">Duracion=16hs</h6>
@@ -317,7 +318,7 @@
                 <div>
                     <p class="precio-">$15000.-</p>
                 </div>
-
+                <button id="boton-curso-" class="boton-cartelito" type="button">COMPRAR</button>
                 <div class="contenedor-informacion-cuadrito">
                     <h5 class="hh5">Coloracion canina</p>
                         <h6 class="duracion">Duracion=16hs</h6>
