--- a/formulario.html
+++ b/formulario.html
@@ -17,6 +17,31 @@
 </head>
 
 <body>
+    <!--CREAR EL MODAL-->
+    <section class="modal" id="modal-cursos">
+        <div id="modal_contenedor" class="d-none">
+            <img src="img/modal.svg" class="modal_img" alt="">
+            <h2 class="modal_titulo">¡¡Gracias por confiar en nosotros!!</h2>
+            <p class="parrafo_modal"> Usted se inscribio al curso de Peluqueria Canina nivel 1
+
+            </p>
+            <div class="contenedor_botones">
+
+                <button class="cerrar_modal1" id="esCorrecto">
+                    <p></p>
+                    <a class="ensale" href="index-Estetica.html">Aceptar</a>
+                </button>
+                <button class="cerrar_modal"><a href="#">Rechazar </a></button>
+
+
+            </div>
+
+        </div>
+    </section>
+
+
+
+
     <!--primeralinea logo carro-->
     <header class="contenedor-buscador">
         <article class="contenedor-log-bu-ca">
@@ -104,10 +129,8 @@
 
             <input id="boton-inscribirse" type="submit" value="Inscribirse">
         </form>
-        <div id="mensajeerrorr" class="color-error">
-
-        </div>
-
+        <div id="mensajeerrorr" class="color-error"></div>
+        <div id="mensajeclick" class="colorclick"></div>
     </main>
     <script src="js/formulario.js"></script>
 
