--- a/index-Estetica.html
+++ b/index-Estetica.html
@@ -22,28 +22,19 @@
 </head>
 
 <body>
-
     <!--CREAR EL MODAL-->
     <section class="modal" id="modal-cursos">
-        <div class="modal_contenedor">
+        <div id="modal_contenedor" class="d-none">
             <img src="img/modal.svg" class="modal_img" alt="">
             <h2 class="modal_titulo">¡¡Gracias por confiar en nosotros!!</h2>
             <p class="cursosComprados_modal"></p>
             <a href="#" class="cerrar_modal"> Cerrar </a>
         </div>
     </section>
-<!--
-        <section class="modal" name="modal-cursos" value="1"> </section>
-    <section class="modal" name="modal-cursos" value="2">
 
-        <div class="modal_contenedor">
-            <img src="img/modal.svg" class="modal_img" alt="">
-            <h2 class="modal_titulo">¡¡Gracias por confiar en nosotros!!</h2>
-            <p class="cursosComprados_modal"></p>
-            <a href="#" class="cerrar_modal"> Cerrar </a>
-        </div>
-    </section>
--->
+
+
+
 
 
     <!--primeralinea logo carro-->
@@ -62,11 +53,15 @@
 
             </div>
             <div class="contenedor-carro">
-                <img class="carrito" src="img/carrito.svg" alt="carrito de compras">
+                <img class="carrito" id="cambiare" src="img/carrito.svg" alt="carrito de compras">
                 <p class="contador">1</p>
+
+
             </div>
+
         </article>
     </header>
+
 
 
     <!--segunda liena redireccion-->
@@ -123,7 +118,7 @@
 
         <h2 class="tex-curso">CURSOS DESTACADOS</h2>
 
-        <section>
+        <section class="contenedor-cursos-perritos">
 
             <div class="contenedor-cuadrito-curso">
                 <!--curso 1-->
@@ -134,7 +129,7 @@
                     <div>
                         <p class="precio-">$15000.-</p>
                     </div>
-
+                    <button id="boton-curso-" class="boton-cartelito" type="button">COMPRAR</button>
                     <div class="contenedor-informacion-cuadrito">
                         <h5 class="hh5">Peluqueria Canina Nivel 1</p>
                             <h6 class="duracion">Duracion=16hs</h6>
@@ -150,7 +145,7 @@
                     <div>
                         <p class="precio-">$15000.-</p>
                     </div>
-
+                    <button id="boton-curso-" class="boton-cartelito" type="button">COMPRAR</button>
                     <div class="contenedor-informacion-cuadrito">
                         <h5 class="hh5">Peluqueria Canina Nivel 2</p>
                             <h6 class="duracion">Duracion=16hs</h6>
@@ -165,7 +160,7 @@
                     <div>
                         <p class="precio-">$15000.-</p>
                     </div>
-
+                    <button id="boton-curso-" class="boton-cartelito" type="button">COMPRAR</button>
                     <div class="contenedor-informacion-cuadrito">
                         <h5 class="hh5">Coloracion canina</p>
                             <h6 class="duracion">Duracion=16hs</h6>
@@ -182,7 +177,7 @@
                     <div>
                         <p class="precio-">$15000.-</p>
                     </div>
-
+                    <button id="boton-curso-" class="boton-cartelito" type="button">COMPRAR</button>
                     <div class="contenedor-informacion-cuadrito">
                         <h5 class="hh5">Diseño de ropa canina</p>
                             <h6 class="duracion">Duracion=16hs</h6>
@@ -197,7 +192,7 @@
                     <div>
                         <p class="precio-">$15000.-</p>
                     </div>
-
+                    <button id="boton-curso-" class="boton-cartelito" type="button">COMPRAR</button>
                     <div class="contenedor-informacion-cuadrito">
                         <h5 class="hh5">Cuidado de patitas</p>
                             <h6 class="duracion">Duracion=16hs</h6>
@@ -213,7 +208,7 @@
                     <div>
                         <p class="precio-">$15000.-</p>
                     </div>
-
+                    <button id="boton-curso-" class="boton-cartelito" type="button">COMPRAR</button>
                     <div class="contenedor-informacion-cuadrito">
                         <h5 class="hh5">Como bañar perritos</p>
                             <h6 class="duracion">Duracion=16hs</h6>
